[project]
name = "Chitung"
version = "0.1.0"
description = "Public Version of Chitung (Python)"
authors = [
    { name = "nullqwertyuiop", email = "null@member.fsf.org" },
]
dependencies = [
    "ichika>=0.0.5",
    "graiax-shortcut>=0.2.1",
    "graia-broadcast>=0.19.2",
    "creart-graia>=0.1.5",
    "kayaku>=0.5.2",
]
requires-python = ">=3.10,<4.0"
license = { text = "AGPL-3.0 License" }

[tool.pdm]

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.1",
    "black>=23.3.0",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
